--- a/assets/Style.CSS
+++ b/assets/Style.CSS
@@ -19,9 +19,10 @@ nav ul li a {
   font-weight: 500;
 }
  h1 {
+  padding: 75px;
    display: flex;
   justify-content: center;
-
+  margin: 20px;
 }
 
 #Gioithieu p {
@@ -31,3 +32,6 @@ nav ul li a {
   text-align: center;
 }
 
+#inf{
+  text-align: center;
+}
